Change from Grid to stack panel for the Appbar layout

--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -20,57 +20,17 @@
                 Note #1
             </TextBlock>
             <TextBox x:Name="Note1TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-            <!--Note 2-->
-            <TextBlock x:Name="Note2LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 10 0 0" >
-                Note #2
-            </TextBlock>
-            <TextBox x:Name="Note2TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-            <!--Note 3-->
-            <TextBlock x:Name="Note3LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 10 0 0" >
-                Note #3
-            </TextBlock>
-            <TextBox x:Name="Note3TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-            <!--Note 4-->
-            <TextBlock x:Name="Note4LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 10 0 0" >
-                Note #4
-            </TextBlock>
-            <TextBox x:Name="Note4TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-            <!--Note 5-->
-            <TextBlock x:Name="Note5LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 10 0 0" >
-                Note #5
-            </TextBlock>
-            <TextBox x:Name="Note5TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-            <!--Note 6-->
-            <TextBlock x:Name="Note6LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 10 0 0" >
-                Note #6
-            </TextBlock>
-            <TextBox x:Name="Note6TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-            <!--Note 7-->
-            <TextBlock x:Name="Note7LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 10 0 0" >
-                Note #7
-            </TextBlock>
-            <TextBox x:Name="Note7TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-            <!--Note 8-->
-            <TextBlock x:Name="Note8LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 10 0 0" >
-                Note #8
-            </TextBlock>
-            <TextBox x:Name="Note8TextBox" Height="Auto" Width="Auto" Foreground="White" Margin="10 5 10 0" Text="Haha" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                     
         </StackPanel>
     </Grid>
 
     <!--Each page has this and top AppBar as well-->
     <Page.BottomAppBar>
         <AppBar>
-            <Grid>
-                <AppBarButton Icon="Download" Label="Sync" HorizontalAlignment="Center"></AppBarButton>
-            </Grid>
+            <StackPanel Orientation="Horizontal">
+                <AppBarButton Icon="Add" Label="Add Note"></AppBarButton>
+                <AppBarButton Icon="Download" Label="Sync"></AppBarButton>
+            </StackPanel>
         </AppBar>
     </Page.BottomAppBar>
 </Page>
