--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -45,7 +45,7 @@
                 </TextBlock>
 
                 <!--Margin is Left, Top, Right, Bottom-->
-                <Grid Margin="10 5 10 0">
+                <Grid x:Name="Note1Grid" Margin="10 5 10 0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.9*"></ColumnDefinition>
                         <ColumnDefinition Width="0.1*"></ColumnDefinition>
@@ -57,7 +57,7 @@
                          HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"
                              Grid.Column="0"></TextBox>
 
-                    <Button x:Name="Note1CancelButton" Height="Auto" Width="Auto" Margin="0" Padding="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
+                    <Button x:Name="Note1DeleteButton" Height="Auto" Width="Auto" Margin="0" Padding="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="DeleteButton_Click">
                         <SymbolIcon Height="Auto" Width="Auto" Symbol="Cancel"></SymbolIcon>
                     </Button>
                 </Grid>
