--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -59,7 +59,7 @@
 
                     <Button x:Name="Note1DeleteButton" Height="Auto" Width="Auto" Margin="0" Padding="0" 
                             Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="DeleteButton_Click"
-                            IsEnabled="False">
+                            IsEnabled="False" Tag="Note1">
                         <SymbolIcon Height="Auto" Width="Auto" Symbol="Cancel"></SymbolIcon>
                     </Button>
                 </Grid>
