--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -18,8 +18,8 @@
                 <StackPanel.DataContext>
                     <viewModel:MainPageViewModel x:Name="mainPageViewModel"></viewModel:MainPageViewModel>
                 </StackPanel.DataContext>
-
-
+                
+                <!-- This is the header-->
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.5*"/>
@@ -38,37 +38,34 @@
                     </StackPanel>
                 </Grid>
 
-                
                 <!--Note 1-->
-                <TextBlock x:Name="Note1LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 5 0 0" >
+                <StackPanel>
+                    <!--Label-->
+                    <TextBlock x:Name="Note1LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 5 0 0" >
                 Note #1
-                </TextBlock>
+                    </TextBlock>
 
-                <!--Margin is Left, Top, Right, Bottom-->
-                <Grid x:Name="Note1Grid" Margin="10 5 10 0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.9*"></ColumnDefinition>
-                        <ColumnDefinition Width="0.1*"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
+                    <!--Margin is Left, Top, Right, Bottom-->
+                    <Grid x:Name="Note1Grid" Margin="10 5 10 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.9*"></ColumnDefinition>
+                            <ColumnDefinition Width="0.1*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
 
-                    <TextBox x:Name="Note1TextBox" Height="Auto" Width="Auto" 
+                        <TextBox x:Name="Note1TextBox" Height="Auto" Width="Auto" 
                          Foreground="White" 
                          Text="{Binding Path=Note1, Mode=TwoWay}" 
                          HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"
                              Grid.Column="0"></TextBox>
 
-                    <Button x:Name="Note1DeleteButton" Height="Auto" Width="Auto" Margin="0" Padding="0" 
+                        <Button x:Name="Note1DeleteButton" Height="Auto" Width="Auto" Margin="0" Padding="0" 
                             Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="DeleteButton_Click"
                             IsEnabled="False" Tag="Note1">
-                        <SymbolIcon Height="Auto" Width="Auto" Symbol="Cancel"></SymbolIcon>
-                    </Button>
-                </Grid>
-                
-                
-                
-                
-                
-                
+                            <SymbolIcon Height="Auto" Width="Auto" Symbol="Cancel"></SymbolIcon>
+                        </Button>
+                    </Grid>
+                </StackPanel>
+                         
             </StackPanel>
         </ScrollViewer>
     </Grid>
