--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -41,12 +41,12 @@
                 <!--Note 1-->
                 <StackPanel x:Name="Note1StackPanel">
                     <!--Label-->
-                    <TextBlock x:Name="Note1LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 5 0 0" >
+                    <TextBlock x:Name="Note1LabelTextBlock" Height="Auto" Width="Auto" Foreground="Gray" Margin="10 5 0 0" Tag="1">
                 Note #1
                     </TextBlock>
 
                     <!--Margin is Left, Top, Right, Bottom-->
-                    <Grid x:Name="Note1Grid" Margin="10 5 10 0">
+                    <Grid x:Name="Note1Grid" Margin="10 5 10 0" Tag="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="0.9*"></ColumnDefinition>
                             <ColumnDefinition Width="0.1*"></ColumnDefinition>
@@ -56,11 +56,11 @@
                          Foreground="White" 
                          Text="{Binding Path=Note1, Mode=TwoWay}" 
                          HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True"
-                             Grid.Column="0"></TextBox>
+                             Grid.Column="0" Tag="1"></TextBox>
 
                         <Button x:Name="Note1DeleteButton" Height="Auto" Width="Auto" Margin="0" Padding="0" 
                             Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Click="DeleteButton_Click"
-                            IsEnabled="False" Tag="Note1">
+                            IsEnabled="False" Tag="1">
                             <SymbolIcon Height="Auto" Width="Auto" Symbol="Cancel"></SymbolIcon>
                         </Button>
                     </Grid>
