Re-implement the Add/Remove

--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -73,8 +73,8 @@
     <!--Each page has this and top AppBar as well-->
     <Page.BottomAppBar>
         <CommandBar>
-            <AppBarButton x:Name="AddNote" Icon="Add" Label="Add Note"></AppBarButton>
-            <AppBarButton x:Name="DeleteNote" Icon="Remove" Label="Delete Note" IsEnabled="False"></AppBarButton>
+            <AppBarButton x:Name="AddNote" Icon="Add" Label="Add Note" Click="AddNote_Click"></AppBarButton>
+            <AppBarButton x:Name="DeleteNote" Icon="Remove" Label="Delete Note" IsEnabled="False" Click="DeleteNote_Click"></AppBarButton>
             <AppBarButton x:Name="SyncNote" Icon="Sync" Label="Sync"></AppBarButton>
             <AppBarButton x:Name="Setting" Icon="Setting" Label="Setting" Click="Setting_Click"></AppBarButton>
         </CommandBar>
