Syncing is tested okay

--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -40,7 +40,7 @@
                 </Grid>
 
                 <!--This is the list view to view all of the Band Notes.-->
-                <ListView ItemsSource="{Binding Notes}" HorizontalAlignment="Stretch">
+                <ListView ItemsSource="{Binding Notes, Mode=TwoWay}" HorizontalAlignment="Stretch">
                      
                     <!--Define a Data Template so XAML can understand how to display the BandNote object-->
                     <ListView.ItemTemplate>
@@ -50,7 +50,7 @@
                                 <TextBox Height="Auto" Width="Auto" 
                                          HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
                                          TextWrapping="Wrap" AcceptsReturn="True"
-                                         Text="{Binding Content}"
+                                         Text="{Binding Content, Mode=TwoWay}"
                                          Margin="10 5 10 0"></TextBox>
                             </StackPanel>
                         </DataTemplate>
