--- a/NotesOnBand/NotesOnBand/Views/SettingPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/SettingPage.xaml
@@ -36,6 +36,23 @@
                 </Grid>
                 
                 
+                <!--FAQ Questions-->
+                <TextBlock x:Name="FAQHeader" Margin="10 10 0 0" Text="FAQ"/>
+                <StackPanel x:Name="FAQStackPanel">
+                    <!--FAQ #1-->
+                    <TextBlock x:Name="FAQ1" Text="Q: How do i remove the Note On Band Tile off my Band?" Foreground="Gray" FontSize="12" Margin="10 5 0 0" TextWrapping="Wrap"></TextBlock>
+                    <TextBlock x:Name="FAQ1Answer" Text="A: Sync 0 note, or go to Microsoft Health app." Foreground="Gray" FontSize="12" Margin="10 5 0 0" TextWrapping="Wrap"></TextBlock>
+
+                    <!--FAQ #2-->
+                    <TextBlock x:Name="FAQ2" Text="Q: Why do i have to click OK to sync to Band everytime?" Foreground="Gray" FontSize="12" Margin="10 10 0 0" TextWrapping="Wrap"></TextBlock>
+                    <TextBlock x:Name="FAQ2Answer" Text="A: Send nice DM to /u/devbent on reddit and beg for it. (API limitation and there isn't a workaround) " Foreground="Gray" FontSize="12" Margin="10 5 0 0" TextWrapping="Wrap"></TextBlock>
+                    
+                    <!--FAQ #3-->
+                    <TextBlock x:Name="FAQ3" Text="Q: Help. It crashes!" Foreground="Gray" FontSize="12" Margin="10 10 0 0" TextWrapping="Wrap"></TextBlock>
+                    <TextBlock x:Name="FAQ3Answer" Text="A: Apply cold water if necessary. Tweet/DM me at @CodeScottLe (or DM on reddit) with screenshots for bug fixes." Foreground="Gray" FontSize="12" Margin="10 5 0 0" TextWrapping="Wrap"></TextBlock>
+                </StackPanel>
+                
+                
                 <!--About section-->
                 <TextBlock x:Name="AboutLabelTextBlock" Text="About" Margin="10 10 0 0"></TextBlock>
                 <StackPanel x:Name="AboutStackPanel">
