--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -54,7 +54,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Vertical">
-                            <TextBlock Text="{Binding Title}" Foreground="Gray" Margin="10 5 0 0"></TextBlock>
+                            <TextBlock Text="{Binding Title, Mode=TwoWay}" Foreground="Gray" Margin="10 5 0 0" DoubleTapped="TextBlock_DoubleTapped"></TextBlock>
                             <TextBox Height="Auto" Width="Auto" 
                                          HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
                                          TextWrapping="Wrap" AcceptsReturn="True"
