Update with version update log

--- a/NotesOnBand/NotesOnBand/Views/MainPage.xaml
+++ b/NotesOnBand/NotesOnBand/Views/MainPage.xaml
@@ -85,6 +85,7 @@
             <AppBarButton x:Name="SyncNote" Icon="Sync" Label="Sync" Click="SyncNote_Click"></AppBarButton>
 
             <CommandBar.SecondaryCommands>
+                <AppBarButton x:Name="VersionInfo" Icon="Help" Label="What's new?" Click="VersionInfo_Click"></AppBarButton>
                 <AppBarButton x:Name="Setting" Icon="Setting" Label="Setting" Click="Setting_Click"></AppBarButton>
             </CommandBar.SecondaryCommands>
         </CommandBar>
